# postgread

./: .build.yml  .gitignore  .hgignore  Cargo.toml  README.md  bitbucket-pipelines.yml
.github/workflows/: verify.yml
src/: async_std_compat.rs  convey.rs  dup.rs  lib.rs  main.rs  msg.rs  server.rs  tls.rs  tokio_compat.rs  util.rs
src/convey/: tests.rs  util.rs
src/convey/tests/: fake_stream.rs  fake_tls.rs  new_msg.rs  protocol.rs
src/msg/: body.rs  io.rs  parts.rs  test_util.rs  type_byte.rs  util.rs
src/msg/body/: authentication.rs  backend_key_data.rs  bind.rs  bind_complete.rs  command_complete.rs  data_row.rs  empty_query_response.rs  error_and_notice_responses.rs  error_response.rs  execute.rs  gss_response.rs  initial.rs  negotiate_protocol_version.rs  parameter_status.rs  parse.rs  parse_complete.rs  password.rs  portal_suspended.rs  query.rs  ready_for_query.rs  row_description.rs  sasl_initial_response.rs  sasl_response.rs  startup.rs  sync.rs  terminate.rs  unknown.rs
src/msg/util/: async_io.rs  decode.rs  encode.rs  io.rs  read.rs  test.rs
src/tls/: interface.rs  native.rs
tests/: tests.rs
tests/client/: Dockerfile  Makefile  init.sh  sshd_config
tests/common/: client.rs  container.rs  docker.rs  global_fixture.rs  mod.rs  socat.rs
tests/e2e/: containers.rs  mod.rs  port_forwarder.rs  ssh_port_forwarder.rs
try/: cert.p12  cert.pem  client.sh  key.pem  run.sh  server.sh
