[package]
name = "postgread"
version = "0.1.1"
authors = ["Kirill Kazakov <k@kirikaza.ru>"]
edition = "2018"

[dependencies]
native-tls = "0.2.3"
async-native-tls = "0.3.2"
async-std = "1.6.5"
async-trait = "0.1.24"
futures = "0.3.4"
hex = "0.4"
num_enum = "0.5.0"
structopt = { version = "0.2", default-features = false }

[dev-dependencies]
bytes = "0.4"
maplit = "1.0.2"
claim = "0.3.1"
